# ai.website-verticalization

./: .env.dev.template  .env.example  .env.prod.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: original_spec.md  premiumness_scoring_spec.md  spec.md  website_verticalizer_deep_dive.md  website_verticalizer_spec.md
models/: us_calib.pkl
outputs/: us_predictions.jsonl
reports/: us_val.compare.json  us_val.json
src/: compare_predictions.py  excel_to_training_csv.py
src/verticalizer/: __init__.py  cli.py
src/verticalizer/apps/crawler/: README.md  cli.py  service.py
src/verticalizer/apps/embedder/: README.md  cli.py  service.py
src/verticalizer/apps/evaluate/: README.md  cli.py  service.py
src/verticalizer/apps/infer/: README.md  cli.py  service.py
src/verticalizer/apps/trainer/: README.md  cli.py  service.py
src/verticalizer/crawl/: __init__.py  fetcher.py  parse.py  robots.py
src/verticalizer/data/: __init__.py  in_groundtruth.json  in_labeled.csv  us_groundtruth.json  us_labeled.csv
src/verticalizer/data/input/: SiteRank_AS_IN.xlsx  SiteRank_US_US.xlsx
src/verticalizer/data/taxonomy/: iab_id_to_label.json  iab_label_to_id.json
src/verticalizer/embeddings/: __init__.py  cache.py  gemini_client.py  sentencetfm.py
src/verticalizer/features/: builder.py
src/verticalizer/models/: __init__.py  calibration.py  keras_multilabel.py  persistence.py  registry.py
src/verticalizer/pipeline/: __init__.py  common.py  drift.py  ensemble.py  graph.py  infer.py  io.py  nodes.py  postprocess.py  self_train.py  train.py
src/verticalizer/scripts/: __init__.py  compare_predictions.py  excel_to_training_csv.py  ingest_kaggle_iab.py  prewarm_embeddings.py
src/verticalizer/storage/: README.md  db.py  repositories.py  s3.py
src/verticalizer/storage/migrations/: 001_init.sql
src/verticalizer/utils/: __init__.py  logging.py  metrics.py  seed.py  taxonomy.py  taxonomy_versioned.py
