[tool.poetry]
name = "iab-verticalizer"
version = "0.1.0"
description = "IAB vertical classification with crawling, embeddings, self-training"
authors = ["Company Internal"]
readme = "README.md"
packages = [{ include = "verticalizer", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
tldextract = "^5.1.2"
readability-lxml = "^0.8.1"
lxml = "^5.2.2"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
tensorflow = "^2.16.1"
pyyaml = "^6.0.2"
tenacity = "^8.5.0"
langgraph = "^0.2.24"
langchain = "^0.2.14"
uvloop = { version = "^0.19.0", markers = "sys_platform != 'win32'" }
orjson = "^3.10.7"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
ruff = "^0.5.7"
mypy = "^1.11.1"

[tool.poetry.scripts]
verticalizer = "verticalizer.cli:app"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
